--- a/configuration/lambda_config.json
+++ b/configuration/lambda_config.json
@@ -2,12 +2,7 @@
   "table": {
     "name": "exodus-cdn-$ENV_TYPE",
     "available_regions": [
-      "us-east-1",
-      "us-west-1",
-      "ap-east-1",
-      "ap-south-1",
-      "ap-southeast-2",
-      "eu-central-1"
+      "us-east-1"
     ]
   },
   "headers": {
