--- a/configuration/exodus-pipeline.yaml
+++ b/configuration/exodus-pipeline.yaml
@@ -263,6 +263,7 @@ Resources:
           - !Ref AWS::NoValue
     DependsOn:
       - CodePipelineRole
+      - CodePipelineBucket
       - CloudFormationRole
 
   CodePipelineEventRule:
