Update deployment documentation
This commit updates documentation to reflect recent changes to
CloudFormation templates. Additionally, some template parameter
descriptions were updated for consistency.

--- a/configuration/exodus-lambda-deploy.yaml
+++ b/configuration/exodus-lambda-deploy.yaml
@@ -12,15 +12,14 @@ Parameters:
       - stage
       - prod
     Default: dev
-    Description: The environment in which to deploy functions
+    Description: The environment for which resources are intended
   oai:
     Type: String
-    MinLength: 10
     Description: The origin access identity ID associated with the environment
   project:
     Type: String
     Default: exodus
-    Description: The project associated with the pipeline
+    Description: The project name under which resources are created
 
 Resources:
   Distribution:
