[RHELDST-1360] Enable headers whitelist of CloudFront in CloudFormation template
1. modify CloudFront configuration, add header "Want-Digest" to whitelist

--- a/configuration/exodus-lambda-deploy.yaml
+++ b/configuration/exodus-lambda-deploy.yaml
@@ -38,6 +38,8 @@ Resources:
             QueryString: false
             Cookies:
               Forward: none
+            Headers:
+              - Want-Digest
           LambdaFunctionAssociations:
             - EventType: origin-request
               LambdaFunctionARN: !Ref OriginRequestFunc.Version
